; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-image.c_remove_by_filename.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-image.c_remove_by_filename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.image_fixture = type { i32*, i32, %struct.TYPE_4__*, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }
%struct.ptunit_result = type { i32 }

@__const.remove_by_filename.buffer = private unnamed_addr constant [3 x i32] [i32 204, i32 204, i32 204], align 4
@pte_nomap = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.image_fixture*)* @remove_by_filename to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @remove_by_filename(%struct.image_fixture* %0) #0 {
  %2 = alloca %struct.ptunit_result, align 4
  %3 = alloca %struct.image_fixture*, align 8
  %4 = alloca [3 x i32], align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.image_fixture* %0, %struct.image_fixture** %3, align 8
  %7 = bitcast [3 x i32]* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 bitcast ([3 x i32]* @__const.remove_by_filename.buffer to i8*), i64 12, i1 false)
  store i32 -1, i32* %6, align 4
  %8 = load %struct.image_fixture*, %struct.image_fixture** %3, align 8
  %9 = getelementptr inbounds %struct.image_fixture, %struct.image_fixture* %8, i32 0, i32 1
  %10 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 0
  %11 = load %struct.image_fixture*, %struct.image_fixture** %3, align 8
  %12 = getelementptr inbounds %struct.image_fixture, %struct.image_fixture* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 0
  %15 = call i32 @pt_image_read(i32* %9, i32* %6, i32* %10, i32 2, i32* %14, i32 4097)
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @ptu_int_eq(i32 %16, i32 2)
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @ptu_int_eq(i32 %18, i32 10)
  %20 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @ptu_uint_eq(i32 %21, i32 1)
  %23 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @ptu_uint_eq(i32 %24, i32 2)
  %26 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 2
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @ptu_uint_eq(i32 %27, i32 204)
  %29 = load %struct.image_fixture*, %struct.image_fixture** %3, align 8
  %30 = getelementptr inbounds %struct.image_fixture, %struct.image_fixture* %29, i32 0, i32 1
  %31 = load %struct.image_fixture*, %struct.image_fixture** %3, align 8
  %32 = getelementptr inbounds %struct.image_fixture, %struct.image_fixture* %31, i32 0, i32 3
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i64 0
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.image_fixture*, %struct.image_fixture** %3, align 8
  %38 = getelementptr inbounds %struct.image_fixture, %struct.image_fixture* %37, i32 0, i32 0
  %39 = load i32*, i32** %38, align 8
  %40 = getelementptr inbounds i32, i32* %39, i64 0
  %41 = call i32 @pt_image_remove_by_filename(i32* %30, i32 %36, i32* %40)
  store i32 %41, i32* %5, align 4
  %42 = load i32, i32* %5, align 4
  %43 = call i32 @ptu_int_eq(i32 %42, i32 1)
  %44 = load %struct.image_fixture*, %struct.image_fixture** %3, align 8
  %45 = getelementptr inbounds %struct.image_fixture, %struct.image_fixture* %44, i32 0, i32 2
  %46 = load %struct.TYPE_4__*, %struct.TYPE_4__** %45, align 8
  %47 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %46, i64 0
  %48 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = call i32 @ptu_int_ne(i32 %49, i32 0)
  %51 = load %struct.image_fixture*, %struct.image_fixture** %3, align 8
  %52 = getelementptr inbounds %struct.image_fixture, %struct.image_fixture* %51, i32 0, i32 2
  %53 = load %struct.TYPE_4__*, %struct.TYPE_4__** %52, align 8
  %54 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %53, i64 1
  %55 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %54, i32 0, i32 0
  %56 = load i32, i32* %55, align 4
  %57 = call i32 @ptu_int_eq(i32 %56, i32 0)
  store i32 -1, i32* %6, align 4
  %58 = load %struct.image_fixture*, %struct.image_fixture** %3, align 8
  %59 = getelementptr inbounds %struct.image_fixture, %struct.image_fixture* %58, i32 0, i32 1
  %60 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 0
  %61 = load %struct.image_fixture*, %struct.image_fixture** %3, align 8
  %62 = getelementptr inbounds %struct.image_fixture, %struct.image_fixture* %61, i32 0, i32 0
  %63 = load i32*, i32** %62, align 8
  %64 = getelementptr inbounds i32, i32* %63, i64 0
  %65 = call i32 @pt_image_read(i32* %59, i32* %6, i32* %60, i32 12, i32* %64, i32 4099)
  store i32 %65, i32* %5, align 4
  %66 = load i32, i32* %5, align 4
  %67 = load i32, i32* @pte_nomap, align 4
  %68 = sub nsw i32 0, %67
  %69 = call i32 @ptu_int_eq(i32 %66, i32 %68)
  %70 = load i32, i32* %6, align 4
  %71 = call i32 @ptu_int_eq(i32 %70, i32 -1)
  %72 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 0
  %73 = load i32, i32* %72, align 4
  %74 = call i32 @ptu_uint_eq(i32 %73, i32 1)
  %75 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 1
  %76 = load i32, i32* %75, align 4
  %77 = call i32 @ptu_uint_eq(i32 %76, i32 2)
  %78 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 2
  %79 = load i32, i32* %78, align 4
  %80 = call i32 @ptu_uint_eq(i32 %79, i32 204)
  store i32 -1, i32* %6, align 4
  %81 = load %struct.image_fixture*, %struct.image_fixture** %3, align 8
  %82 = getelementptr inbounds %struct.image_fixture, %struct.image_fixture* %81, i32 0, i32 1
  %83 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 0
  %84 = load %struct.image_fixture*, %struct.image_fixture** %3, align 8
  %85 = getelementptr inbounds %struct.image_fixture, %struct.image_fixture* %84, i32 0, i32 0
  %86 = load i32*, i32** %85, align 8
  %87 = getelementptr inbounds i32, i32* %86, i64 1
  %88 = call i32 @pt_image_read(i32* %82, i32* %6, i32* %83, i32 2, i32* %87, i32 8195)
  store i32 %88, i32* %5, align 4
  %89 = load i32, i32* %5, align 4
  %90 = call i32 @ptu_int_eq(i32 %89, i32 2)
  %91 = load i32, i32* %6, align 4
  %92 = call i32 @ptu_int_eq(i32 %91, i32 11)
  %93 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 0
  %94 = load i32, i32* %93, align 4
  %95 = call i32 @ptu_uint_eq(i32 %94, i32 3)
  %96 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 1
  %97 = load i32, i32* %96, align 4
  %98 = call i32 @ptu_uint_eq(i32 %97, i32 4)
  %99 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 2
  %100 = load i32, i32* %99, align 4
  %101 = call i32 @ptu_uint_eq(i32 %100, i32 204)
  %102 = call i32 (...) @ptu_passed()
  %103 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %2, i32 0, i32 0
  store i32 %102, i32* %103, align 4
  %104 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %2, i32 0, i32 0
  %105 = load i32, i32* %104, align 4
  ret i32 %105
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @pt_image_read(i32*, i32*, i32*, i32, i32*, i32) #2

declare dso_local i32 @ptu_int_eq(i32, i32) #2

declare dso_local i32 @ptu_uint_eq(i32, i32) #2

declare dso_local i32 @pt_image_remove_by_filename(i32*, i32, i32*) #2

declare dso_local i32 @ptu_int_ne(i32, i32) #2

declare dso_local i32 @ptu_passed(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
